@@ -21,10 +21,11 @@ that your course staff has already installed it for you.
 <p>
 Download URLs:
 <blockquote>
-<A HREF=ftp://ftp.eecs.harvard.edu/pub/os161/>ftp://ftp.eecs.harvard.edu/pub/os161/</A>
+<A HREF=http://os161.eecs.harvard.edu/download/>http://os161.eecs.harvard.edu/download/</A>
+(long-term address not yet operational)
 <br>
-<A HREF=ftp://ftp.eecs.harvard.edu/pub/os161/old/>ftp://ftp.eecs.harvard.edu/pub/os161/old/</A>
-(for older versions)
+<A HREF=http://www.eecs.harvard.edu/~dholland/os161/download/>http://www.eecs.harvard.edu/~dholland/os161/download/</A>
+(current as of this writing)
 </blockquote>
 </p>
 
