@@ -1,1 +1,1 @@
-VERSION=1.99.05
+VERSION=1.99.06
